1.76.5 (2018-xx-xx):

Fixes:
------
#1045: Config window shows several incorrect properties for HTTPS connections
#1038: Unable to add connection with active filter
#1036: Exception when themes are active and options page closed on Connections then reopened
#1034: Connection context menu not being translated
#1030: Exception thrown if importing from port scan and no tree node is selected
#1020: BackupFileKeepCount setting not limiting backup file count
#1004: Duplicating root or PuTTy node through hotkey causes unhandled exception
#1002: Disabling filtering without clearing keyword leaves filtered state
#1001: Connection tree context menu hotkeys stop working and disappear in some cases
#999: Some hotkeys stop working if File menu was called when PuTTy Saved Sessions was selected
#998: Can sometimes add connection under PuTTY Sessions node
#991: Error when deleting host in filtered view
#971: Portable Settings now apply to any machine they are used on
#961: Connections file overwritten if correct decryption password not provided


1.76.4 Alpha 6 (2018-06-03):

Features/Enhancements:
----------------------
#948: Fixed issue where many menu item translations were not being used
#942: Improved Russian translation of several items
#924: Notification for "No Host Specified" when clicking folders in quick-connect menu
#902: Menu bar can once again be moved. View -> "Lock toolbar positions" now also locks the menu position
Added option for creating an empty panel on startup

Fixes:
------
#938: Minor layout improvements on the Port Scan screen
#916: Default properties were not being saved


1.76.3 Alpha 5 (2018-03-14):

Fixes:
------
#911: Csv exports sometimes do not include all fields
#807: Inheritance is sometimes turned on for nodes under root Connections node


1.76.2 Alpha 4 (2018-03-03):

Fixes:
------
#899: DoNotPlay is Case Sensitive in XML Serialization


1.76.1 Alpha 3 (2018-02-24):

Features/Enhancements:
----------------------