@@ -3,6 +3,7 @@
 Fixes:
 ------
 #1045: Config window shows several incorrect properties for HTTPS connections
+#1039: Set default theme when themes disabled
 #1038: Unable to add connection with active filter
 #1036: Exception when themes are active and options page closed on Connections then reopened
 #1034: Connection context menu not being translated
